evaluation/rq1/sota/mythril/execution_logs/0x0xd9################################379e4_bsc.txt
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xd9################################379e4_bsc/StakeTokenV2.sol:43:5: SyntaxError: No visibility specified. Did you intend to add "public"?
    constructor() {
    ^ (Relevant source part starts here and spans across multiple lines).

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xd9################################379e4_bsc/StakeTokenV2_0.sol:43:5: SyntaxError: No visibility specified. Did you intend to add "public"?
    constructor() {
    ^ (Relevant source part starts here and spans across multiple lines).

